<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.lishid</groupId>
  <artifactId>orebfuscator</artifactId>
  <version>${orebfuscator-version}</version>
  <packaging>jar</packaging>

  <name>Orebfuscator4</name>
  <url>http://dev.bukkit.org/server-mods/orebfuscator/</url>

  <parent>
    <groupId>com.lishid.parent</groupId>
    <artifactId>orebfuscator-parent</artifactId>
    <version>parent</version>
  </parent>
  
<dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.14.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.comphenix.protocol</groupId>
      <artifactId>ProtocolLib-API</artifactId>
      <version>4.4.0</version>
      <scope>provided</scope>
      <optional>true</optional>
      <exclusions>
      	<exclusion>
      		<artifactId>cglib-nodep</artifactId>
      		<groupId>cglib</groupId>
      	</exclusion>
      	<exclusion>
      		<artifactId>BukkitExecutors</artifactId>
      		<groupId>com.comphenix.executors</groupId>
      	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-api</artifactId>
      <version>API</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_9_R1</artifactId>
      <version>v1_9_R1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_9_R2</artifactId>
      <version>v1_9_R2</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_10_R1</artifactId>
      <version>v1_10_R1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_11_R1</artifactId>
      <version>v1_11_R1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_12_R1</artifactId>
      <version>v1_12_R1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_13_R1</artifactId>
      <version>v1_13_R1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_13_R2</artifactId>
      <version>v1_13_R2</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_14_R1</artifactId>
      <version>v1_14_R1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.lishid</groupId>
      <artifactId>orebfuscator-v1_15_R1</artifactId>
      <version>v1_15_R1</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
</dependencies>

  <build>
    <directory>./target</directory>
    <sourceDirectory>src/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>.</directory>
        <filtering>false</filtering>
        <includes>
          <include>LICENSE</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.3</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <scm>
    <connection>scm:git:git://github.com/lishid/Orebfuscator.git</connection>
    <developerConnection>scm:git:git@github.com:lishid/Orebfuscator.git</developerConnection>
    <url>https://github.com/lishid/Orebfuscator</url>
  </scm>
</project>
